syntax = "proto3";
option csharp_namespace = "GrpcAuth";
package auth.v1;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthReply);
  rpc Login    (LoginRequest)    returns (AuthReply);
  rpc Me       (Empty)           returns (UserDto);
}

message Empty {}

message RegisterRequest { string email = 1; string password = 2; }
message LoginRequest    { string email = 1; string password = 2; }

message AuthReply {
  bool   success = 1;
  string message = 2;
  string jwt     = 3;
}

message UserDto {
  string id    = 1;
  string email = 2;
}
